--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "electron-quick-start",
   "version": "1.0.0",
   "description": "A minimal Electron application",
-  "main": "main.js",
+  "main": "js/main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/alexsavio/electron-quick-start",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Electron"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Alexandre Savio",
+  "license": "Apache License 2.0",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.7"
   }
 }
